# vr_essentials

./: .gitignore  DOCUMENTACION_INDICE.md  startapp.txt
docs/: monado_overview.md  piloto_industria4.md  slides.css  tutorial_webxr_vrmeta.md  vr_informe_slides.html  vr_informe_slides.md  webxr_overview.md
vrmeta_app/: ESTADO_PROYECTO_2024-10-13.md  README.md  launch.txt  pyproject.toml
vrmeta_app/src/vrmeta_server/: __init__.py  app.py  main.py  routes.py
vrmeta_app/src/vrmeta_server/ext/: __init__.py  bridge.py
vrmeta_app/src/vrmeta_server/web/: index.html
