[project]
name = "vrmeta-server"
version = "0.1.0"
description = "Backend FastAPI + WebSocket para bridge con clientes WebXR/VR"
authors = [{ name = "vrmeta" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
]

[project.optional-dependencies]
mqtt = ["asyncio-mqtt>=0.16.1"]
opcua = ["asyncua>=1.1.3"]

[project.scripts]
vrmeta-server = "vrmeta_server.main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
